--- a/CPSC581.html
+++ b/CPSC581.html
@@ -155,16 +155,16 @@
 
                   <!-- Project: Image  -->
                   <div class="text-center">
-                    <img src="./imgs/cpsc581/p1/MusicNote9.png" class="img-fluid">
+                    <img src="./imgs/cpsc581/p2/icon.png" class="img-fluid">
                   </div>
 
 
                   <br>
                   <!-- Project: Title  -->
-                  <h5 class="card-title">Project 2: Creative Unlock Apps</h5>
+                  <h5 class="card-title">Project 2: Washing Machine Notifier</h5>
 
                   <!-- Project: Brief Descrption -->
-                  <p class="card-text"> Two different iOS apps that each simulate a creative way to unlock your phone. Developed using Xcode and Swift.  </p>
+                  <p class="card-text"> A project built using arduino that allows a user to be notified when their laundry is done. </p>
                 </div>
 
                 <!--Project Tags  -->
