--- a/CPSC581.html
+++ b/CPSC581.html
@@ -617,27 +617,27 @@
 
 
               <div>
-                <img src="./imgs/cpsc581/p2/sketch01.jpg" class="img-fluid rounded" style=”transform:rotate(180deg)” >
+                <img src="./imgs/cpsc581/p2/sketch01.JPG" class="img-fluid rounded" style=”transform:rotate(180deg)” >
                 <br>
                 <br>
 
-                <img src="./imgs/cpsc581/p2/sketch2.jpg" class="img-fluid rounded" >
+                <img src="./imgs/cpsc581/p2/sketch2.JPG" class="img-fluid rounded" >
                 <br>
                 <br>
 
-                <img src="./imgs/cpsc581/p2/sketch3.jpg" class="img-fluid rounded" >
+                <img src="./imgs/cpsc581/p2/sketch3.JPG" class="img-fluid rounded" >
                 <br>
                 <br>
 
-                <img src="./imgs/cpsc581/p2/sketch4.jpg" class="img-fluid rounded" >
+                <img src="./imgs/cpsc581/p2/sketch4.JPG" class="img-fluid rounded" >
                 <br>
                 <br>
 
-                <img src="./imgs/cpsc581/p2/sketch5.jpg" class="img-fluid rounded" >
+                <img src="./imgs/cpsc581/p2/sketch5.JPG" class="img-fluid rounded" >
                 <br>
                 <br>
 
-                <img src="./imgs/cpsc581/p2/sketch6.jpg" class="img-fluid rounded" >
+                <img src="./imgs/cpsc581/p2/sketch6.JPG" class="img-fluid rounded" >
                 <br>
                 <br>
               </div>
