--- a/CPSC581.html
+++ b/CPSC581.html
@@ -637,7 +637,7 @@
                 <br>
                 <br>
 
-                <img src="./imgs/cpsc581/p2/sketch6.JPG" class="img-fluid rounded" >
+                <img src="./imgs/cpsc581/p2/sketch6.jpg" class="img-fluid rounded" >
                 <br>
                 <br>
               </div>
