udpate sketch pic

--- a/CPSC581.html
+++ b/CPSC581.html
@@ -617,7 +617,7 @@
 
 
               <div>
-                <img src="./imgs/cpsc581/p2/sketch01.JPG" class="img-fluid rounded" style=”transform:rotate(180deg)” >
+                <img src="./imgs/cpsc581/p2/1sketch.png" class="img-fluid rounded" >
                 <br>
                 <br>
 
