--- a/CPSC581.html
+++ b/CPSC581.html
@@ -56,7 +56,7 @@
 
           <div>
             <nav class="d-flex justify-content-center nav">
-              <a class="nav-link h4 text-primary" id="home-Button">Overview</a>
+              <a class="nav-link h4 text-primary" id="home-Button">Home</a>
               <a class="nav-link h4 text-primary" id="projects-Button">Projects</a>
 
               <a class="nav-link h4 text-primary" id="contact-Button">Contact</a>
@@ -82,102 +82,136 @@
       <br>
 
       <div class="container px-3">
-        <h2 class="border-bottom">CPSC 581 - Human Computer Interaction II Projects</h2>
+
 
 
         <div class="row">
 
-          <!--Project 0  -->
-          <div class="col col-md-4 col-12">
-            <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
-              <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
-                <div class="card-body" data-toggle="modal" data-target="#project0Card">
+          <!-- Skills -->
+          <div class="col col-md-12 col-lg-4">
 
-                  <!-- Project: Image  -->
-                  <img src="./imgs/cpsc581/p0/donut1.svg" class="img-fluid" style="width: 18rem; height: 10rem;">
-                  <br>
-                  <br>
-                  <!-- Project: Title  -->
-                  <h5 class="card-title">Project 0: Homer Simpson</h5>
+            <h3 class="border-bottom">Overview</h3>
 
-                  <!-- Project: Brief Descrption -->
-                  <p class="card-text"> A 'button' that was developed based on the characteristics and iconic traits of Homer Simpson. Built with JavaScript.</p>
+            <p>This page contains the projects I worked on (or am working on) for the class CPSC 581 - Human Computer Interaction II. In this class I’ve learned more about design process and idea generation and ideation. These small-scale projects showcase working with different technologies to brainstorm, design, and implement creative user interfaces in a variety of environments. </p>
+
+          </div>
+
+          <div class="col col-md-12 col-lg-8">
+            <h3 class="border-bottom">Projects</h3>
+
+            <!--Highlighted Projects Container  -->
+            <div class="container mt-4 mb-5">
+              <div class="row">
+
+
+
+         <!--Project 0: Homer Simpson  -->
+         <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
+           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
+             <div class="card-body" data-toggle="modal" data-target="#project0Card">
+
+               <!-- Project: Image  -->
+               <img src="./imgs/cpsc581/p0/donut1.svg" class="img-fluid" style="width: 18rem; height: 10rem;">
+               <br>
+               <br>
+               <!-- Project: Title  -->
+               <h5 class="card-title">Project 0: Homer Simpson</h5>
+
+               <!-- Project: Brief Descrption -->
+               <p class="card-text"> A 'button' that was developed based on the characteristics and iconic traits of Homer Simpson. Built with JavaScript.</p>
+             </div>
+
+             <!--Project Tags  -->
+             <div class="card-footer">
+               <!-- Web Developement Tag with Popover  -->
+               <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
+               <!-- UI Design Tag  -->
+               <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+             </div>
+           </div>
+         </div>
+
+          <!--Project 1: Creative Unlock Apps  -->
+          <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
+            <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
+              <div class="card-body" data-toggle="modal" data-target="#project1Card">
+
+                <!-- Project: Image  -->
+                <div class="text-center">
+                  <img src="./imgs/cpsc581/p1/MusicNote9.png" class="img-fluid">
                 </div>
 
-                <!--Project Tags  -->
-                <div class="card-footer">
-                  <!-- Web Developement Tag with Popover  -->
-                  <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
-                  <!-- UI Design Tag  -->
-                  <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
-                </div>
+
+                <br>
+                <!-- Project: Title  -->
+                <h5 class="card-title">Project 1: Creative Unlock Apps</h5>
+
+                <!-- Project: Brief Descrption -->
+                <p class="card-text"> Two different iOS apps that each simulate a creative way to unlock your phone. Developed using Xcode and Swift.  </p>
+              </div>
+
+              <!--Project Tags  -->
+              <div class="card-footer">
+                <!-- Web Developement Tag with Popover  -->
+                <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
+                <!-- UI Design Tag  -->
+                <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
               </div>
             </div>
           </div>
+
+
+          <!--Project 2: Washing Machine Notifier  -->
+          <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
+            <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
+              <div class="card-body" data-toggle="modal" data-target="#project2Card">
+
+                <!-- Project: Image  -->
+                <div class="text-center">
+                  <img src="./imgs/cpsc581/p2/icon.png" class="img-fluid">
+                </div>
+
+
+                <br>
+                <!-- Project: Title  -->
+                <h5 class="card-title">Project 2: Washing Machine Notifier</h5>
+
+                <!-- Project: Brief Descrption -->
+                <p class="card-text"> A project built using arduino that allows a user to be notified when their laundry is done. </p>
+              </div>
+
+              <!--Project Tags  -->
+              <div class="card-footer">
+                <!-- Web Developement Tag with Popover  -->
+                <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
+                <!-- UI Design Tag  -->
+                <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+              </div>
+            </div>
+          </div>
+
+
+
+          <!--New Projects Here  -->
+
+
+          </div>
+        </div>
+      </div>
+
+
 
           <!-- Project 1 -->
-          <div class="col col-md-4 col-12">
-            <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
-              <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
-                <div class="card-body" data-toggle="modal" data-target="#project1Card">
-
-                  <!-- Project: Image  -->
-                  <div class="text-center">
-                    <img src="./imgs/cpsc581/p1/MusicNote9.png" class="img-fluid">
-                  </div>
+          <!-- <div class="col col-md-4 col-12">
 
 
-                  <br>
-                  <!-- Project: Title  -->
-                  <h5 class="card-title">Project 1: Creative Unlock Apps</h5>
-
-                  <!-- Project: Brief Descrption -->
-                  <p class="card-text"> Two different iOS apps that each simulate a creative way to unlock your phone. Developed using Xcode and Swift.  </p>
-                </div>
-
-                <!--Project Tags  -->
-                <div class="card-footer">
-                  <!-- Web Developement Tag with Popover  -->
-                  <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
-                  <!-- UI Design Tag  -->
-                  <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
-                </div>
-              </div>
-            </div>
-
-          </div>
+          </div> -->
 
           <!-- Project 2 -->
-          <div class="col col-md-4 col-12">
-            <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
-              <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
-                <div class="card-body" data-toggle="modal" data-target="#project2Card">
-
-                  <!-- Project: Image  -->
-                  <div class="text-center">
-                    <img src="./imgs/cpsc581/p2/icon.png" class="img-fluid">
-                  </div>
+          <!-- <div class="col col-md-4 col-12">
 
 
-                  <br>
-                  <!-- Project: Title  -->
-                  <h5 class="card-title">Project 2: Washing Machine Notifier</h5>
-
-                  <!-- Project: Brief Descrption -->
-                  <p class="card-text"> A project built using arduino that allows a user to be notified when their laundry is done. </p>
-                </div>
-
-                <!--Project Tags  -->
-                <div class="card-footer">
-                  <!-- Web Developement Tag with Popover  -->
-                  <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
-                  <!-- UI Design Tag  -->
-                  <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
-                </div>
-              </div>
-            </div>
-
-          </div>
+          </div> -->
 
 
         </div>
